--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css".css>
 </head>
 <body>
-    <h1>hello and welcome to almak pro.com</h1>
+    <h1>hello and welcome to almak pro.com a site for men </h1>
     <p>
+
 
         <a href="shop.html"> GO TO SHOP-buy </a> 
     </p>
-
+<a href="information.html">information</a>
+<p>
     <a href="sell.html">here to sell pruducts</a>
 
 </body>
