--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1> hello here you can buy what ever you want </h1>
+    <!-- <a href="information.html" class="btn btn-primary">VAI AD INFORMAZIONI</a> -->
+
+    <div class="row">
+        <div class="col">
+            <img src="uomo1.jpg" alt="" width="500">
+        </div>
+        <div class="col">
+            <h2>abito da lavoro </h2>
+            <p>by armond</p>
+            <a href="" class="">buy</a>
+        </div>
+    </div>
+    
+
+    <div class="row">
+        <div class="col">
+        <img src="non udentificato luigi .jpg" alt="" width="500">
+            <h2>abito da cerimonia poro air </h2>
+            
+            <p>by donio</p>
+            <div class="col">
+                <a href="buy"></a>
+                <div>
+
+                </div>
+
+    <img src="ipo.jpg" alt="">
+    <img src="abiti.jpg" alt="">
+    <img src="ho.jpg" alt="">
 </body>
 </html>
