--- a/information.html
+++ b/information.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>information our site is made whit hyml ceo alessandro bassone  </h1>
+  <h2> this site is made whith html in h-farm by computer </h2>  
+  <img src="hoh.jpg" alt="">
+  <img src="p.jpg" alt="">
     <link rel="stylesheet" href="style.css">
 </body>
 </html>
