--- a/sell.html
+++ b/sell.html
@@ -13,10 +13,10 @@
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <label for="exampleFormControlTextarea1" class="form-label"> put product here </label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
-      <label for="customRange1" class="form-label">mow much</label>
+      <label for="customRange1" class="form-label">mow much descount </label>
 <input type="range" class="form-range" id="customRange1">
 <div></div>
 
