--- a/shop.html
+++ b/shop.html
@@ -67,7 +67,7 @@
                          <div class="row">
                             <div class="col">
                                 <img src="ho.jpg" alt="" width="500">
-                                <h2>abito da lavoro </h2>
+                                <h2>abito da polizioto </h2>
                     
                                 <p>by cinefunk</p>
                                 <div class="col">
